tailwind first part

--- a/src/components/primitives/Heading/Heading.module.scss
+++ b/src/components/primitives/Heading/Heading.module.scss
@@ -1,5 +1,4 @@
-@import "../../../styles/mixins/responsive";
-@import "../../../styles/functions/rem";
+@import '../../../styles/mixins/responsive';
 
 .heading {
     margin: 1rem auto;
