--- a/src/blocks/SubpageListBlock/SubpageListBlock.module.scss
+++ b/src/blocks/SubpageListBlock/SubpageListBlock.module.scss
@@ -1,13 +1,13 @@
-@import "../../styles/mixins/responsive";
+@import '../../styles/mixins/responsive';
 
 .wrapper {
   grid-column: 1 / span 6;
 
-  @include mobile-landscape {
+  @include from-mobile-landscape {
     grid-column: 1 / span 12;
   }
 
-  @include tablet {
+  @include from-tablet {
     grid-column: 3 / span 12;
   }
 }
