--- a/src/blocks/VideoBlock/VideoBlock.module.scss
+++ b/src/blocks/VideoBlock/VideoBlock.module.scss
@@ -1,11 +1,11 @@
-@import "../../styles/mixins/responsive";
+@import '../../styles/mixins/responsive';
 
 .wrapper {
-  @include tablet {
+  @include from-tablet {
     grid-column: 2 / span 8;
   }
 
-  @include tablet-landscape {
+  @include from-tablet-landscape {
     grid-column: 3 / span 10;
   }
 
