--- a/src/components/organisms/Pagination/Pagination.module.scss
+++ b/src/components/organisms/Pagination/Pagination.module.scss
@@ -1,13 +1,12 @@
-@import '../../../styles/functions/rem';
 @import '../../../styles/mixins/responsive';
 
 .wrapper {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    margin: rem(40) 0;
+    margin: 2.5rem 0;
 
-    @include mobile-landscape {
+    @include from-mobile-landscape {
         flex-direction: row;
         align-items: center;
     }
@@ -17,10 +16,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: rem(24);
+    margin-top: 1.5rem;
 
-    @include mobile-landscape {
-        margin-left: rem(70);
+    @include from-mobile-landscape {
+        margin-left: 4.5rem;
         margin-top: 0;
     }
 }
@@ -29,8 +28,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: rem(43);
-    height: rem(43);
+    width: 2.5rem;
+    height: 2.5rem;
     border-bottom: 1px solid transparent;
 
     a {
