--- a/src/blocks/SubpageListBlock/SubpageListBlock.module.scss
+++ b/src/blocks/SubpageListBlock/SubpageListBlock.module.scss
@@ -1,13 +1,10 @@
 @import '../../styles/mixins/responsive';
+@import '../../styles/layout';
 
 .wrapper {
-  grid-column: 1 / span 6;
+    @apply w-full;
 
-  @include from-mobile-landscape {
-    grid-column: 1 / span 12;
-  }
-
-  @include from-tablet {
-    grid-column: 3 / span 12;
-  }
+    @include from-tablet {
+        padding: 0 offsetWidth(2);
+    }
 }
