--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -5,8 +5,10 @@
         font-style: normal;
         font-weight: 300;
         font-display: swap;
-        src: local('Hind Light'), local('Hind-Light'), url(https://fonts.gstatic.com/s/hind/v11/5aU19_a8oxmIfMJaER2SjRhc9V11uQ.woff2) format('woff2');
-        unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
+        src: local('Hind Light'), local('Hind-Light'),
+            url(https://fonts.gstatic.com/s/hind/v11/5aU19_a8oxmIfMJaER2SjRhc9V11uQ.woff2) format('woff2');
+        unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839,
+            U+A8E0-A8FB;
     }
     /* latin-ext */
     @font-face {
@@ -14,8 +16,10 @@
         font-style: normal;
         font-weight: 300;
         font-display: swap;
-        src: local('Hind Light'), local('Hind-Light'), url(https://fonts.gstatic.com/s/hind/v11/5aU19_a8oxmIfMJaERKSjRhc9V11uQ.woff2) format('woff2');
-        unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+        src: local('Hind Light'), local('Hind-Light'),
+            url(https://fonts.gstatic.com/s/hind/v11/5aU19_a8oxmIfMJaERKSjRhc9V11uQ.woff2) format('woff2');
+        unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F,
+            U+A720-A7FF;
     }
     /* latin */
     @font-face {
@@ -23,8 +27,10 @@
         font-style: normal;
         font-weight: 300;
         font-display: swap;
-        src: local('Hind Light'), local('Hind-Light'), url(https://fonts.gstatic.com/s/hind/v11/5aU19_a8oxmIfMJaERySjRhc9V0.woff2) format('woff2');
-        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+        src: local('Hind Light'), local('Hind-Light'),
+            url(https://fonts.gstatic.com/s/hind/v11/5aU19_a8oxmIfMJaERySjRhc9V0.woff2) format('woff2');
+        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074,
+            U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
     }
     /* devanagari */
     @font-face {
@@ -32,8 +38,10 @@
         font-style: normal;
         font-weight: 400;
         font-display: swap;
-        src: local('Hind Regular'), local('Hind-Regular'), url(https://fonts.gstatic.com/s/hind/v11/5aU69_a8oxmIdGh4BDGwgDJm_A.woff2) format('woff2');
-        unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
+        src: local('Hind Regular'), local('Hind-Regular'),
+            url(https://fonts.gstatic.com/s/hind/v11/5aU69_a8oxmIdGh4BDGwgDJm_A.woff2) format('woff2');
+        unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839,
+            U+A8E0-A8FB;
     }
     /* latin-ext */
     @font-face {
@@ -41,8 +49,10 @@
         font-style: normal;
         font-weight: 400;
         font-display: swap;
-        src: local('Hind Regular'), local('Hind-Regular'), url(https://fonts.gstatic.com/s/hind/v11/5aU69_a8oxmIdGd4BDGwgDJm_A.woff2) format('woff2');
-        unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+        src: local('Hind Regular'), local('Hind-Regular'),
+            url(https://fonts.gstatic.com/s/hind/v11/5aU69_a8oxmIdGd4BDGwgDJm_A.woff2) format('woff2');
+        unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F,
+            U+A720-A7FF;
     }
     /* latin */
     @font-face {
@@ -50,8 +60,10 @@
         font-style: normal;
         font-weight: 400;
         font-display: swap;
-        src: local('Hind Regular'), local('Hind-Regular'), url(https://fonts.gstatic.com/s/hind/v11/5aU69_a8oxmIdGl4BDGwgDI.woff2) format('woff2');
-        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+        src: local('Hind Regular'), local('Hind-Regular'),
+            url(https://fonts.gstatic.com/s/hind/v11/5aU69_a8oxmIdGl4BDGwgDI.woff2) format('woff2');
+        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074,
+            U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
     }
     /* devanagari */
     @font-face {
@@ -59,8 +71,10 @@
         font-style: normal;
         font-weight: 500;
         font-display: swap;
-        src: local('Hind Medium'), local('Hind-Medium'), url(https://fonts.gstatic.com/s/hind/v11/5aU19_a8oxmIfJpbER2SjRhc9V11uQ.woff2) format('woff2');
-        unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
+        src: local('Hind Medium'), local('Hind-Medium'),
+            url(https://fonts.gstatic.com/s/hind/v11/5aU19_a8oxmIfJpbER2SjRhc9V11uQ.woff2) format('woff2');
+        unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839,
+            U+A8E0-A8FB;
     }
     /* latin-ext */
     @font-face {
@@ -68,8 +82,10 @@
         font-style: normal;
         font-weight: 500;
         font-display: swap;
-        src: local('Hind Medium'), local('Hind-Medium'), url(https://fonts.gstatic.com/s/hind/v11/5aU19_a8oxmIfJpbERKSjRhc9V11uQ.woff2) format('woff2');
-        unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+        src: local('Hind Medium'), local('Hind-Medium'),
+            url(https://fonts.gstatic.com/s/hind/v11/5aU19_a8oxmIfJpbERKSjRhc9V11uQ.woff2) format('woff2');
+        unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F,
+            U+A720-A7FF;
     }
     /* latin */
     @font-face {
@@ -77,8 +93,10 @@
         font-style: normal;
         font-weight: 500;
         font-display: swap;
-        src: local('Hind Medium'), local('Hind-Medium'), url(https://fonts.gstatic.com/s/hind/v11/5aU19_a8oxmIfJpbERySjRhc9V0.woff2) format('woff2');
-        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+        src: local('Hind Medium'), local('Hind-Medium'),
+            url(https://fonts.gstatic.com/s/hind/v11/5aU19_a8oxmIfJpbERySjRhc9V0.woff2) format('woff2');
+        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074,
+            U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
     }
     /* devanagari */
     @font-face {
@@ -86,8 +104,10 @@
         font-style: normal;
         font-weight: 700;
         font-display: swap;
-        src: local('Hind Bold'), local('Hind-Bold'), url(https://fonts.gstatic.com/s/hind/v11/5aU19_a8oxmIfNJdER2SjRhc9V11uQ.woff2) format('woff2');
-        unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
+        src: local('Hind Bold'), local('Hind-Bold'),
+            url(https://fonts.gstatic.com/s/hind/v11/5aU19_a8oxmIfNJdER2SjRhc9V11uQ.woff2) format('woff2');
+        unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839,
+            U+A8E0-A8FB;
     }
     /* latin-ext */
     @font-face {
@@ -95,8 +115,10 @@
         font-style: normal;
         font-weight: 700;
         font-display: swap;
-        src: local('Hind Bold'), local('Hind-Bold'), url(https://fonts.gstatic.com/s/hind/v11/5aU19_a8oxmIfNJdERKSjRhc9V11uQ.woff2) format('woff2');
-        unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+        src: local('Hind Bold'), local('Hind-Bold'),
+            url(https://fonts.gstatic.com/s/hind/v11/5aU19_a8oxmIfNJdERKSjRhc9V11uQ.woff2) format('woff2');
+        unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F,
+            U+A720-A7FF;
     }
     /* latin */
     @font-face {
@@ -104,7 +126,9 @@
         font-style: normal;
         font-weight: 700;
         font-display: swap;
-        src: local('Hind Bold'), local('Hind-Bold'), url(https://fonts.gstatic.com/s/hind/v11/5aU19_a8oxmIfNJdERySjRhc9V0.woff2) format('woff2');
-        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+        src: local('Hind Bold'), local('Hind-Bold'),
+            url(https://fonts.gstatic.com/s/hind/v11/5aU19_a8oxmIfNJdERySjRhc9V0.woff2) format('woff2');
+        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074,
+            U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
     }
 }
